--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ deployment:
     branch: [circle-ci, master]
     commands:
       - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-      - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
-      - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:latest
+      - docker tag dockerapp_dockerapp_1_257c01310d7d $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
+      - docker tag dockerapp_dockerapp_1_257c01310d7d $DOCKER_HUB_USER_ID/dockerapp:latest
       - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
       - docker push $DOCKER_HUB_USER_ID/dockerapp:latest
