--- a/circle.yml
+++ b/circle.yml
@@ -1,23 +1,24 @@
-machine:
-  pre:
-    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.13.0
-  services:
-    - docker
+jobs:
+  machine:
+    pre:
+      - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.13.0
+    services:
+      - docker
 
-dependencies:
-  pre:
-    - sudo pip install docker-compose==1.13.0
+  dependencies:
+    pre:
+      - sudo pip install docker-compose==1.13.0
 
-test:
-  override:
-    - docker-compose up -d
-    - docker-compose run dockerapp python test.py
-deployment:
-  hub:
-    branch: [circle-ci, master]
-    commands:
-      - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-      - docker tag dockerapp_dockerapp_1_257c01310d7d $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
-      - docker tag dockerapp_dockerapp_1_257c01310d7d $DOCKER_HUB_USER_ID/dockerapp:latest
-      - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
-      - docker push $DOCKER_HUB_USER_ID/dockerapp:latest
+  test:
+    override:
+      - docker-compose up -d
+      - docker-compose run dockerapp python test.py
+  deployment:
+    hub:
+      branch: [circle-ci, master]
+      commands:
+        - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
+        - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
+        - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:latest
+        - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
+        - docker push $DOCKER_HUB_USER_ID/dockerapp:latest
